--- a/style/style.css
+++ b/style/style.css
@@ -9,7 +9,7 @@
 */
 
 body {
-    background: #0a0a0a url(images/background.jpg) top center no-repeat;
+    background: #0a0a0a top center no-repeat;
     color: #ccc;
     font: Arial, Helvetica, sans-serif;
     line-height: 1.3em;
