--- a/style.css
+++ b/style.css
@@ -86,6 +86,14 @@ a.label {
   font-weight: bold;
 }
 
+img.bibtexthumb {
+  display: block;
+  max-height: 5.5em;
+  padding: 0;
+  margin-bottom: 0;
+  border: 0;
+}
+
 
 /*##### ICONS #####*/
 div.icon {
