--- a/style/origo.css
+++ b/style/origo.css
@@ -1,6 +1,9 @@
+@import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900);
+
 body {
-  background: #0a0a0a  no-repeat scroll center top;
-  color: #cccccc;
+/*  background: #0a0a0a  no-repeat scroll center top;*/
+/*  color: #cccccc;*/
+  font: Lato, Arial, Helvetica, sans-serif;
   line-height: 1.3em;
 }
 a {
@@ -167,32 +170,36 @@ body.wider .c12 {
   width: 1180px;
 }
 ul.menu {
-  border-top: 1px solid #333333;
-  margin: 0;
-  padding: 10px 0;
-  list-style-type: none;
-  list-style-image: none;
-  list-style-position: outside;
+    margin: 0;
+    list-style-type: none;
+    padding-left: 0;
+    background-color: #5f5f5f;
+    text-align: center;
+    float: right;
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top:0;
 }
+
 ul.menu li {
-  border-bottom: 1px solid #333333;
-  margin: 0 0 10px;
-  padding: 0 0 8px;
-  list-style-type: none;
-  list-style-image: none;
-  list-style-position: outside;
-  text-align: center;
-  font-size: 1.2em;
-  color: #888888;
+  float: left;
 }
+
 ul.menu li a {
+  padding: 4px 16px 4px 16px;
+  display: inline;
+  text-decoration: none;
+  color: white;
+  font-family: 'Roboto',sans-serif;
   font-size: 1.2em;
-  font-weight: 400;
 }
+
 ul.menu li a:hover {
-  color: #eeeeee;
+  color: white;
+  background-color: black;
   text-decoration: none;
 }
+
 .slogan {
   color: #bbbbbb;
   font-size: 1.2em;
@@ -239,8 +246,8 @@ ul.menu li a:hover {
   color: #000000;
 }
 body.light {
-  background: #fafafa  no-repeat scroll center top;
-  color: #444444;
+  background: white  no-repeat scroll center top;
+  /*color: black;*/
 }
 body.light a {
   color: #d06060;
@@ -263,13 +270,14 @@ body.light h1, body.light h2, body.light h3 {
   color: #d06060;
 }
 body.light ul.menu {
-  border-top: 1px solid #dddddd;
-}
+/*  border-left: 1px solid #dddddd;
+*/}
 body.light ul.menu li {
-  border-bottom: 1px solid #dddddd;
-}
+/*  border-right: 1px solid #dddddd;
+*/}
 body.light ul.menu li a:hover {
-  color: #333333;
+  color: gold;
+  border-bottom: 2px solid #2f5fee;
 }
 body.light .separator {
   border-bottom: 1px dotted #cccccc;
