--- a/style/style.css
+++ b/style/style.css
@@ -41,10 +41,18 @@ pre {
   white-space: pre-wrap;
   hyphens: auto;
   word-break: keep-all;
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 9.5px;
 }
 
 span.title,span.note,span.addendum {
   font-weight: bold;
+}
+
+a {
+  text-decoration: none;
 }
 
 /*.note {
@@ -82,9 +90,6 @@ span.bibtex_search_stats {
   font-size:17px;
 }
 
-a.label {
-  font-weight: bold;
-}
 
 img.bibtexthumb {
   display: block;
