--- a/style/style.css
+++ b/style/style.css
@@ -4,8 +4,8 @@ html {
   -webkit-text-size-adjust: 100%;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  color: #6E6974;
-  font-family: "Roboto Slab", serif;
+  color: black;
+  font-family: "Roboto", sans-serif;
   line-height: 1.6;
   font-weight: 400;
   background: #fff;
